--- a/index.html
+++ b/index.html
@@ -4,33 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frame Studio - প্রোফাইল ফ্রেম মেকার</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>নির্বাচনী ফ্রেম স্টুডিও - আপনার ছবি ফ্রেম করুন</title>
+    <meta name="title" content="নির্বাচনী ফ্রেম স্টুডিও">
+    <meta name="description" content="সহজেই আপনার ছবি দিয়ে নির্বাচনী প্রচারণার ফ্রেম তৈরি করুন। ছবি আপলোড করুন এবং ডাউনলোড করুন।">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="নির্বাচনী ফ্রেম স্টুডিও">
+    <meta property="og:description" content="সহজেই আপনার ছবি দিয়ে নির্বাচনী প্রচারণার ফ্রেম তৈরি করুন।">
+    <meta property="og:image" content="11.png">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
     <style>
         body {
             font-family: 'Hind Siliguri', sans-serif;
-            background-color: #f0f7f4;
+            background-color: #f8fafc;
+            color: #1e293b;
         }
-        .canvas-container {
-            aspect-ratio: 1/1;
-            width: 100%;
-            max-width: 500px;
+        /* Custom scrollbar for better UX */
+        ::-webkit-scrollbar {
+            width: 8px;
         }
-        input[type="range"] {
-            accent-color: #10b981;
+        ::-webkit-scrollbar-track {
+            background: #f1f5f9;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #cbd5e1;
+            border-radius: 4px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #94a3b8;
         }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4"
-  }
-}
-</script>
+
+    <script type="importmap">
+    {
+      "imports": {
+        "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+        "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+        "react/": "https://esm.sh/react@^19.2.4/",
+        "react": "https://esm.sh/react@^19.2.4"
+      }
+    }
+    </script>
 </head>
 <body>
     <div id="root"></div>
